--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-
+    <div class="absolute center">
+        <h1 id="phrase-wrapper"></h1>
+    </div>
 </body>
 <script src="scripts.js"></script>
 
