--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="absolute center">
-        <h1 id="phrase-wrapper"></h1>
+        <h1 id="phrase-wrapper">No JS 🦙</h1>
     </div>
 </body>
 <script src="scripts.js"></script>
