--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Title Memory</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,500;0,800;1,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="absolute center">
-        <h1 id="phrase-wrapper">No JS 🦙</h1>
-    </div>
+    <main>
+    	<button id="edit" form="editor"><i class="fas fa-pen"></i></button>
+    	<article>
+    		<h1 id="message">Hello, world!</h1>
+    		<form id="editor" class="hidden">
+    			<input />
+    		</form>
+    	</article>
+    </main>
 </body>
 <script src="scripts.js"></script>
 
