New custom pencil icon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 
 <body>
     <main>
-    	<button id="edit" form="editor"><i class="fas fa-pen"></i></button>
+    	<button id="edit" form="editor">
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M20.485,7.757c0.188,-0.187 0.293,-0.442 0.293,-0.707c0,-0.265 -0.105,-0.519 -0.293,-0.707c-0.784,-0.785 -2.043,-2.044 -2.828,-2.828c-0.188,-0.188 -0.442,-0.293 -0.707,-0.293c-0.265,-0 -0.52,0.105 -0.707,0.293c-0.354,0.353 -0.707,0.707 -0.707,0.707l4.242,4.242c0,0 0.354,-0.353 0.707,-0.707Z"/>
+                <path d="M18.364,9.879l-4.243,-4.243c0,0 -7.331,7.331 -8.899,8.9c-0.188,0.187 -0.293,0.441 -0.293,0.707c-0,1.067 -0,3.828 -0,3.828l3.828,0c0.266,0 0.52,-0.105 0.707,-0.293c1.569,-1.568 8.9,-8.899 8.9,-8.899Z"/>
+            </svg>
+        </button>
     	<article>
     		<h1 id="message">Hello, world!</h1>
     		<form id="editor" class="hidden">
